[workspace]
members = [
  "workspace-hack",
  "xtask",
  "hn-server",
  "hn-desktop",
  "hn-hinted-id",
  "hn-desktop-ui",
  "hn-desktop-executor",
  "hn-desktop-ui-messages",
  "hn-app",
  "hn-keys",
  "hn-public-api",
  "hn-tracing",
  # 'vendor/slint/api/rs/build',
  # 'vendor/slint/api/rs/slint',
  # 'vendor/slint/internal/backends/winit',
  # 'vendor/slint/internal/backends/qt',
  # 'vendor/slint/internal/backends/selector',
  # 'vendor/slint/internal/backends/linuxkms',
  # 'vendor/slint/internal/compiler',
  # 'vendor/slint/internal/core',
  # 'vendor/slint/internal/interpreter',
  # 'vendor/slint/tools/viewer',
  # 'vendor/slint/tools/lsp',
]
exclude = [
  "vendor/shipyard",
  "vendor/quickjs-rs",
  "vendor/tracing-opentelemetry",
  "vendor/bonsaidb",
  "vendor/slint",
]
resolver = "2"

[workspace.package]
# Must be 1.3.0 in order to keep slint in our workspace
version = "1.3.0"
rust-version = "1.71.1"
edition = "2021"
authors = ["Cole Lawrence <cole@colelawrence.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/colelawrence/here-now"
homepage = "https://github.com/colelawrence/here-now"
keywords = []
documentation = ""

[workspace.dependencies]
hn-app = { path = "./hn-app", version = "*" }
hn-keys = { path = "./hn-keys", version = "*" }
hn-public-api = { path = "./hn-public-api", version = "*" }
hn-tracing = { path = "./hn-tracing", version = "*" }
hn-hinted-id = { path = "./hn-hinted-id", version = "*" }
ui = { package = "hn-desktop-ui-messages", path = "./hn-desktop-ui-messages", version = "*" }
derive-codegen = { path = "vendor/derive-codegen/derive-codegen", version = "*" }
i-codegen-derive = { path = "vendor/derive-codegen/derive", version = "*" }
i-codegen-code = { path = "vendor/derive-codegen/code", version = "*" }
shipyard_app = { path = "vendor/shipyard_app", version = "*" }
shipyard = { path = "vendor/shipyard", version = "*", features = [
  "proc",
  "tracing",
] }
bonsaidb = { path = "vendor/bonsaidb/crates/bonsaidb", version = "0.4.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.37"
tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0"

# slint (excluding submodule)
slint = { version = "=1.2.2", default-features = false, features = [
  "std",
  "compat-1-2",
  "backend-winit",
  "renderer-femtovg",
] }
slint-build = { version = "=1.2.2" }
i-slint-backend-selector = { version = "=1.2.2" }

# # for slint
# i-slint-backend-linuxkms = { version = "=1.3.0", path = "vendor/slint/internal/backends/linuxkms", default-features = false }
# i-slint-backend-qt = { version = "=1.3.0", path = "vendor/slint/internal/backends/qt", default-features = false }
# i-slint-backend-selector = { version = "=1.3.0", path = "vendor/slint/internal/backends/selector", default-features = false }
# i-slint-backend-testing = { version = "=1.3.0", path = "vendor/slint/internal/backends/testing", default-features = false }
# i-slint-backend-winit = { version = "=1.3.0", path = "vendor/slint/internal/backends/winit", default-features = false }
# i-slint-common = { version = "=1.3.0", path = "vendor/slint/internal/common", default-features = false }
# i-slint-compiler = { version = "=1.3.0", path = "vendor/slint/internal/compiler", default-features = false }
# i-slint-core = { version = "=1.3.0", path = "vendor/slint/internal/core", default-features = false }
# i-slint-core-macros = { version = "=1.3.0", path = "vendor/slint/internal/core-macros", default-features = false }
# i-slint-renderer-femtovg = { version = "=1.3.0", path = "vendor/slint/internal/renderers/femtovg", default-features = false }
# i-slint-renderer-skia = { version = "=1.3.0", path = "vendor/slint/internal/renderers/skia", default-features = false }
# slint = { version = "=1.3.0", path = "vendor/slint/api/rs/slint", default-features = false }
# slint-build = { version = "=1.3.0", path = "vendor/slint/api/rs/build", default-features = false }
# slint-cpp = { version = "=1.3.0", path = "vendor/slint/api/cpp", default-features = false }
# slint-interpreter = { version = "=1.3.0", path = "vendor/slint/internal/interpreter", default_features = false }
# slint-macros = { version = "=1.3.0", path = "vendor/slint/api/rs/macros", default-features = false }

# resvg = { version = "0.34.0", default-features = false, features = ["text"] }
# fontdb = { version = "0.14.1", default-features = false }
# send_wrapper = { version = "0.6.0" }
# cbindgen = { version = "0.26", default-features = false }
# toml_edit = "0.20"
# css-color-parser2 = { version = "1.0.1" }
# itertools = "0.11"

# optimizations borrowed from the slint project

[profile.release]
lto = true
panic = "abort"

[profile.dev]
debug = "line-tables-only"
opt-level = 1
panic = "abort"
