[package]
name = "hn-app"
version = "0.1.0"
edition = "2021"
description = "Common code for here now frontend and backend"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hn-hinted-id.workspace = true
shipyard.workspace = true
shipyard_app.workspace = true
anyhow.workspace = true
bonsaidb = { workspace = true, default-features = false }
tracing.workspace = true
i-hn-app-proc = { version = "0.0.0", path = "./proc" }
tokio.workspace = true
futures = "0.3.28"
workspace-hack = { version = "0.1", path = "../workspace-hack" }
