[package]
name = "here-now-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
anyhow.workspace = true
derive-codegen.workspace = true
actionable = "0.2.0"
bonsaidb = { version = "0.4.1", default-features = false }
