[package]
name = "hn-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
anyhow.workspace = true
derive-codegen.workspace = true
actionable = "0.2.0"
bonsaidb = { workspace = true, default-features = false, features = ["local"]}
hpke = { version = "0.10.0", features = ["std"]}
rand = "0.8.5"
base64 = "0.21.2"
pot = "2.0.0"

[dev-dependencies]
serde_json.workspace = true
