[package]
name = "hn-design-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palette = "0.7.2"
derive-codegen.workspace = true
serde.workspace = true
serde_json = { version = "1.0" }
material-color-utilities-rs = "0.2.1"
clap = { version = "4.3.11", features = ["derive"] }
anyhow.workspace = true
