[package]
name = "hn-desktop-executor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hn-app.workspace = true
hn-keys.workspace = true
hn-public-api.workspace = true
hn-tracing.workspace = true
ui.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
shipyard.workspace = true
shipyard_app.workspace = true
bonsaidb = { workspace = true, default-features = false, features = [] }
reqwest = { version = "0.11.18", features = ["json", "serde_json"] }
serde_json.workspace = true
anyhow.workspace = true
