[package]
name = "hn-desktop-ui-messages"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
serde.workspace = true
hn-hinted-id.workspace = true
i-hn-desktop-ui-messages-proc = { version = "0.0.0", path = "./proc" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
