[package]
name = "desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hn-app.workspace = true
hn-common.workspace = true
serde.workspace = true
shipyard.workspace = true
shipyard_app.workspace = true
bonsaidb = { workspace = true, default-features = false, features = [] }
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "serde_json"] }
serde_json.workspace = true
anyhow.workspace = true
tracing = { version = "0.1.37", features = ["async-await"] }
tracing-subscriber = "0.3.17"
