[package]
name = "desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hn-tracing.workspace = true
hn-desktop-executor = { path = "../hn-desktop-executor" }
hn-desktop-ui = { path = "../hn-desktop-ui" }
ui.workspace = true
tracing.workspace = true
