[package]
name = "hn-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
here-now-common.workspace = true
derive-codegen.workspace = true
serde.workspace = true
shipyard.workspace = true
shipyard_app.workspace = true
anyhow.workspace = true
serde_json.workspace = true
i-hn-server-proc = { version = "0.0.0", path = "./proc" }
actionable = "0.2.0"
axum = "0.6.18"
bonsaidb = { version = "0.4.1", default-features = false, features = ["server", "server-instrument"] }
quick-js = { version = "0.4.2-alpha.0", path = "../vendor/quickjs-rs", features = ["serde"]}
env_logger = "0.10.0"
futures = "0.3.28"
maud = { version = "0.25.0", features = ["axum"] }
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.1", features = ["fs", "trace"] }
tracing = "0.1.37"
toml_edit = { version = "0.19.12", features = ["serde"] }
minijinja = { version = "1.0.3", features = ["loader", "multi_template"] }
minijinja-autoreload = "1.0.3"
async-trait = "0.1.71"
http = "0.2.9"
tower-layer = "0.3.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
directories = "5.0.1"
once_cell = "1.18.0"
notify = "6.0.1"
rayon = "1.7.0"
inquire = "0.6.2"
axum-server = "0.5.1"
urlencoding = "2.1.3"
reqwest = { version = "0.11.18", features = ["multipart"] }
tracing-opentelemetry = { version = "0.19.0", path = "../vendor/tracing-opentelemetry" }
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.18.0", features = ["rt-tokio", "reqwest_collector_client"] }
reverse-proxy-service = { version = "0.2.0", features = ["axum"] }
current_platform = "0.2.0"
# flashmap = "0.1.0"
# watchable = "1.1.1"
# derive_more = { version = "1.0.0-beta.2", features = ["debug"] }
