[package]
name = "hn-tracing"
version = "0.1.0"
edition = "2021"
description = "Common code for here now frontend and backend"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tokio.workspace = true
env_logger = "0.10.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.19.0", path = "../vendor/tracing-opentelemetry" }
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.18.0", features = ["rt-tokio", "reqwest_collector_client"] }
reqwest = { version = "0.11.18", features = ["json", "serde_json"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
