[package]
name = "hn-usr"
version = "0.1.0"
description = "User displayed content such as rich text inline"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }
