[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[features]
default = []
docs = ["clap/unstable-doc"]

[dependencies]
hn-tracing.workspace = true
tracing.workspace = true
clap = { version = "4.3.18", features = ["derive"] }
current_platform = "0.2.0"
# devx-cmd properly cleans up child processes for us
devx-cmd = { version = "0.5.0", path = "./devx-cmd" }
jod-thread = "0.1.2"
serde.workspace = true
serde_json.workspace = true
