[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[features]
default = []
docs = ["clap/unstable-doc"]

[dependencies]
hn-tracing.workspace = true
tracing.workspace = true
clap = { version = "4.4.8", features = ["derive"] }
current_platform = "0.2.0"
# devx-cmd properly cleans up child processes for us
devx-cmd = { version = "0.5.0", path = "./devx-cmd" }
jod-thread = "0.1.2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }
sqlx-cli = { version = "0.7.3", default-features = false, features = [
  "sqlite",
] }
sea-orm-cli = { version = "0.12.6", default-features = false, features = [
  "codegen",
  "cli",
  "sqlx",
] }
sysinfo = "0.29.11"
