[package]
name = "ui_main_window"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { path = "../../vendor/slint/api/rs/slint", version = "^1.0" }

[build-dependencies]
slint-build = { path = "../../vendor/slint/api/rs/build", version = "^1.0" }
