[package]
name = "ui_main_window"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[build-dependencies]
slint-build.workspace = true
