[package]
name = "ui_settings_profile_server_window"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { path = "../../vendor/slint/api/rs/slint", version = "^1.0" }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[build-dependencies]
slint-build = { path = "../../vendor/slint/api/rs/build", version = "^1.0" }
