[package]
name = "i-hn-server-proc"
description = "Proc-macro supporting the `hn-server` crate."
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
publish = false

[lib]
doc = false
proc-macro = true

[dependencies]
derive-codegen.workspace = true
quote = "1.0.2"

[dependencies.proc-macro2]
version = "1.0.66"
default-features = false
