[package]
name = "rn-desktop"
version = "0.0.0"
description = "Right Now task tracking app"
authors = ["Cole Lawrence <cole@colelawrence.com>"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
hn-app.workspace = true
hn-keys.workspace = true
hn-tracing.workspace = true
sea-orm = { version = "0.12.7", features = [
  "sqlx-sqlite",
  "macros",
  "runtime-tokio",
] }
# so we can directly enable runtime-tokio feature since sea-orm doesn't enable it
sqlx = { version = "0.7.3", default-features = false, features = [
  "runtime-tokio",
  "macros",
  "migrate",
] }
shipyard.workspace = true
shipyard_app.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

# general deps
anyhow.workspace = true
reqwest = { version = "0.11.18", features = ["json", "serde_json"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# tauri deps
# https://docs.rs/tauri/latest/tauri/#cargo-features
tauri = { version = "1.5", features = [ "system-tray",
  "notification-all",
  "window-start-dragging",
  "shell-open",
  "icon-png",
  # "global-shortcut",
  # "clipboard",
] }
# tauri-utils = { version = "1.5", features = ["schema"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-stronghold = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-deep-link = "0.1.2"
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2.7"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
