[package]
name = "i-rn-desktop-proc"
description = "Proc-macro supporting the `rn-desktop` crate."
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
publish = false

[lib]
doc = false
proc-macro = true

[dependencies]
derive-codegen.workspace = true
quote = "1.0.2"
tauri = { version = "1.5" }
tracing.workspace = true

[dependencies.proc-macro2]
version = "1.0.66"
default-features = false
